; ModuleID = '/home/carl/AnghaBench/linux/sound/hda/extr_hdac_device.c_get_num_conns.c'
source_filename = "/home/carl/AnghaBench/linux/sound/hda/extr_hdac_device.c_get_num_conns.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hdac_device = type { i32 }

@AC_WCAP_CONN_LIST = common dso_local global i32 0, align 4
@AC_WID_VOL_KNB = common dso_local global i64 0, align 8
@AC_PAR_CONNLIST_LEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.hdac_device*, i32)* @get_num_conns to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_num_conns(%struct.hdac_device* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.hdac_device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.hdac_device* %0, %struct.hdac_device** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load %struct.hdac_device*, %struct.hdac_device** %4, align 8
  %9 = load i32, i32* %5, align 4
  %10 = call i32 @get_wcaps(%struct.hdac_device* %8, i32 %9)
  store i32 %10, i32* %6, align 4
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* @AC_WCAP_CONN_LIST, align 4
  %13 = and i32 %11, %12
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %21, label %15

15:                                               ; preds = %2
  %16 = load i32, i32* %6, align 4
  %17 = call i64 @get_wcaps_type(i32 %16)
  %18 = load i64, i64* @AC_WID_VOL_KNB, align 8
  %19 = icmp ne i64 %17, %18
  br i1 %19, label %20, label %21

20:                                               ; preds = %15
  store i32 0, i32* %3, align 4
  br label %31

21:                                               ; preds = %15, %2
  %22 = load %struct.hdac_device*, %struct.hdac_device** %4, align 8
  %23 = load i32, i32* %5, align 4
  %24 = load i32, i32* @AC_PAR_CONNLIST_LEN, align 4
  %25 = call i32 @snd_hdac_read_parm(%struct.hdac_device* %22, i32 %23, i32 %24)
  store i32 %25, i32* %7, align 4
  %26 = load i32, i32* %7, align 4
  %27 = icmp eq i32 %26, -1
  br i1 %27, label %28, label %29

28:                                               ; preds = %21
  store i32 0, i32* %7, align 4
  br label %29

29:                                               ; preds = %28, %21
  %30 = load i32, i32* %7, align 4
  store i32 %30, i32* %3, align 4
  br label %31

31:                                               ; preds = %29, %20
  %32 = load i32, i32* %3, align 4
  ret i32 %32
}

declare dso_local i32 @get_wcaps(%struct.hdac_device*, i32) #1

declare dso_local i64 @get_wcaps_type(i32) #1

declare dso_local i32 @snd_hdac_read_parm(%struct.hdac_device*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
